[tool.poetry]
name = "poetry-boilerplate"
version = "1.0.0"
description = "Python poetry boilerplate"
authors = ["Jayant Chauhan"]

[tool.poetry.dependencies]
python = "3.12.*"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.7.1"
pydocstyle = "^6.3.0"
rich = "^13.7.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.1.1"

[tool.poetry.group.docs.dependencies]
pydocstyle = { extras = ["toml"], version = "*" }

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
